# chat-olive

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  init-ssl.sh  plan.md  setup.sh  spec.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f0515e290d8_initial_tables.py  74c96d1e3c53_add_session_id_to_conversations.py
backend/app/: config.py  main.py
backend/app/api/: chat.py  conversation.py  logs.py  metrics.py  session.py
backend/app/db/: models.py
backend/app/lib/: pii.py  pricing.py
backend/app/sdk/: llm_sdk.py
backend/app/worker/: consumer.py
frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: ChatWindow.tsx  Dashboard.tsx  LogsTable.tsx  ModelPicker.tsx  OnboardingDialog.tsx  Sidebar.tsx  StreamingMessage.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useMetrics.ts  useStreamingText.ts
frontend/src/lib/: session.ts
nginx/: nginx.conf.template
